# zpodcore

./: .env.default  .flake8  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  justfile  pyproject.toml  zpodcore.code-workspace.default
zpodapi/: README.md  dockerfile  pyproject.toml
zpodapi/scripts/alembic/: alembic.ini  env.py  script.py.mako
zpodapi/scripts/alembic/versions/: 20221220-201019-a23e07de84d2_initial.py  20230215-170430-79910b0877c2_update.py  20230306-171005-2f6c907fc8c5_components_fixes.py  20230307-162929-0c87e32f129c_update.py  20230310-134856-6abffe9b0679_update.py  20230310-161824-2d4f541e097a_update.py  20230310-195641-5394f81ed48d_update.py  20230314-132600-c1d6479325ce_add_endpoints.py  20230314-151651-9ab4b74009c3_update.py  20230315-150449-a0b6287f4552_update.py  20230315-175442-1c10dbfe6448_common_dates.py  20230315-195153-377b99272e35_instance.py  20230320-182606-ed3586602581_init_db.py  20230321-144758-2b0c6f9756a3_instance.py  20230321-183746-fb2fd328f41a_instance.py  20230323-180939-77f096106bb3_instance.py  20230325-173842-80fc695fabfd_update_endpoints.py  20230331-031744-e969a7948284_update.py  20230331-145813-5e58d39f5542_update.py  20230331-165116-4ced08822970_update.py  20230331-171059-42aeec43b377_update.py  20230331-175623-15e9fd1eef5f_added_comp_desc.py  20230428-132556-5953ffc1f677_add_settings_and_fixes_to_components.py  20230502-182045-a231b93c89ed_inst_comp_status.py  20230510-180625-e7cba7d82ff4_message_update.py  20230512-154939-08d70e352053_message_update.py  20230515-132133-b3578d275fe2_initial.py  20230515-162256-09672b7ad41d_component_update.py  20230517-000539-a84f30a806e0_component_update.py  20230614-152413-1427af2dd43a_profile.py  20230822-180040-cf21e63aeb4f_instance_component_ip_hostname_fqdn.py  20230912-203052-e67c0d042ef8_user_updates.py  20230913-194638-4b74dede5619_permission_groups.py  20230922-174318-05a7cece1c44_permission.py  20240318-135810-ff3998a4f8da_zpod.py  20240410-141458-dd8eb1dea37f_endpoint_status.py  20240609-153942-08d982dc70de_update.py  20240618-174437-73910346a24f_component_checksum.py  20250323-153432-fdc3605928ad_add_features_to_zpod.py
zpodapi/scripts/openapi/: generate_openapi_json.py
zpodapi/scripts/startup/: gunicorn_conf.py  load_initial_data.py  prestart.sh  start.py  start_reload.py  wait_for_db.py
zpodapi/src/zpodapi/: __init__.py  main.py  settings.py
zpodapi/src/zpodapi/components/: component__dependencies.py  component__routes.py  component__schemas.py  component__services.py  component__types.py  component__utils.py  component_dependencies.py  component_routes.py  component_schemas.py  component_services.py  component_utils.py
zpodapi/src/zpodapi/endpoints/: endpoint__dependencies.py  endpoint__routes.py  endpoint__schemas.py  endpoint__services.py  endpoint__types.py  endpoint__utils.py  endpoint_dependencies.py  endpoint_enet__dependencies.py  endpoint_enet__routes.py  endpoint_enet__schemas.py  endpoint_enet__services.py  endpoint_permission__dependencies.py  endpoint_permission__routes.py  endpoint_permission__schemas.py  endpoint_permission__services.py  endpoint_routes.py  endpoint_schemas.py  endpoint_services.py  endpoint_utils.py
zpodapi/src/zpodapi/instances/: instance__dependencies.py  instance__enums.py  instance__routes.py  instance__schemas.py  instance__services.py  instance__types.py  instance_component__dependencies.py  instance_component__routes.py  instance_component__schemas.py  instance_component__services.py  instance_component__types.py  instance_dependencies.py  instance_feature__dependencies.py  instance_feature__routes.py  instance_feature__schemas.py  instance_feature__services.py  instance_network__dependencies.py  instance_network__routes.py  instance_network__schemas.py  instance_routes.py  (+8 more)
zpodapi/tests/: conftest.py  test_root.py  test_routes_smoke.py  test_users.py
zpodcli/: README.md  pyproject.toml  testcli.py
zpodcli/src/zpodcli/: main.py  main_cli.py
zpodcli/tests/: test_smoke.py
zpodcommon/: README.md  pyproject.toml
zpodcommon/src/zpodcommon/: enums.py
zpodcommon/tests/: test_enums.py  test_network_utils.py
zpodengine/: README.md  dockerfile  dockerfile-worker  prefect.yaml  pyproject.toml
zpodengine/.prefect/: flows.json
zpodengine/bootstrap/: create_blocks.py  create_default_settings.sh  create_deployments.py  start_worker.sh
zpodengine/scripts/: create_blocks.py  create_deployments.py
zpodengine/src/zpodengine/: __init__.py  flow_init.py
zpodengine/tests/: test_smoke.py
zpodsdk/: README.md  pyproject.toml  zpodsdk.md
zpodsdk/src/zpodsdk/: __init__.py  zpod_client.py
zpodsdk/tests/: test_smoke.py
zpodsdk/zpod/: __init__.py  zpod_client.py
zpodsdk/zpod/models/: __init__.py  component_update.py  component_view.py  component_view_full.py  endpoint_compute_create.py  endpoint_compute_update.py  endpoint_compute_view.py  endpoint_create.py  endpoint_enet_create.py  endpoint_enet_view.py  endpoint_network_create.py  endpoint_network_update.py  endpoint_network_view.py  endpoint_permission.py  endpoint_permission_group_add_remove.py  endpoint_permission_user_add_remove.py  endpoint_permission_view.py  endpoint_update.py  endpoint_view.py  endpoint_view_full.py  endpoints_create.py  endpoints_update.py  endpoints_view.py  instance_component_create.py  instance_component_create_data.py  instance_component_data_create.py  instance_component_data_view.py  instance_component_view.py  instance_component_view_data.py  instance_create.py  instance_feature_view.py  instance_feature_view_data.py  instance_network_view.py  instance_permission.py  instance_permission_group_add_remove.py  instance_permission_user_add_remove.py  instance_permission_view.py  instance_status.py  instance_status_enum.py  instance_update.py  (+23 more)
zpodsdk_builder/: build.sh  build_client.py  config.yaml  dockerfile  pyproject.toml  update.sh
zpodsdk_builder/templates/: endpoint_macros.py.jinja  endpoint_module.py.jinja  package_init.py.jinja
zpodsdk_builder/templates/property_templates/: union_property.py.jinja
(+494 files in other folders)
