[tool.poetry]
name = "zpodcore"
version = "0.1.0"
description = ""
authors = ["Kelby Valenti <kvalenti@vmware.com>", "Timo Sugliani <tsugliani@vmware.com>"]
readme = "README.md"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",
]

[tool.ruff.isort]
known-first-party = [
    "zpodapi",
    "zpodcli",
    "zpodcommon",
    "zpodengine",
    "zpodsdk",
]
