[tool.poetry]
name = "zpodcore"
version = "0.7.1"
description = ""
authors = ["Kelby Valenti <kelby.valenti@gmail.com>", "Timo Sugliani <timo.sugliani@gmail.com>"]
readme = "README.md"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = [
    "zpodapi",
    "zpodcli",
    "zpodcommon",
    "zpodengine",
    "zpodsdk",
]

[[tool.poetry_bumpversion.replacements]]
files = [
    "zpodapi/src/zpodapi/__init__.py",
    "zpodcli/src/zpodcli/__init__.py",
    "zpodengine/src/zpodengine/__init__.py",
    "zpodsdk/src/zpodsdk/__init__.py"
]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.poetry_bumpversion.replacements]]
files = [
    "zpodapi/pyproject.toml",
    "zpodcli/pyproject.toml",
    "zpodengine/pyproject.toml",
    "zpodsdk/pyproject.toml",
    "zpodsdk_builder/pyproject.toml"
]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.poetry_bumpversion.replacements]]
files = [
    "zpodcli/pyproject.toml"
]
search = 'zpodsdk = "{current_version}"'
replace = 'zpodsdk = "{new_version}"'
