[tool.poetry]
name = "zpodapi"
version = "0.7.1"
description = ""
authors = ["Kelby Valenti <kelby.valenti@gmail.com>", "Timo Sugliani <timo.sugliani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
alembic = "1.13.1"
email-validator = "2.1.1"
fastapi = "0.111.0"
gitpython = "3.1.43"
gunicorn = "22.0.0"
httpx = "0.27.0"
ipython = "^8.20.0"
passlib = "1.7.4"
psycopg2 = "2.9.9"
pydantic-settings = "2.2.1"
python = "3.12.1"
python-dotenv = "1.0.1"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
python-multipart = "0.0.9"
pyvmomi = "8.0.2.0.1"
rich = "13.7.1"
sqlmodel = "0.0.18"
tenacity = "8.3.0"
uvicorn = "0.29.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
debugpy = "^1.6.6"
pytest = "^8"
pytest-cov = "^5.0"
pytest-xdist = "^3.2"
ruff = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
