[project]
name = "zpodapi"
version = "0.7.2"
description = ""
authors = [
    { name = "Kelby Valenti", email = "kelby.valenti@gmail.com" },
    { name = "Timo Sugliani", email = "timo.sugliani@gmail.com" },
]
readme = "README.md"
requires-python = "==3.12.1"
dependencies = [
    "alembic==1.13.1",
    "email-validator==2.1.1",
    "fastapi==0.115.11",
    "gitpython==3.1.43",
    "gunicorn==22.0.0",
    "httpx==0.27.0",
    "ipython>=8.20,<9",
    "passlib==1.7.4",
    "psycopg2==2.9.9",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.4.0",
    "python-multipart==0.0.18",
    "pyvmomi==8.0.2.0.1",
    "rich==13.9.4",
    "sqlmodel==0.0.18",
    "tenacity==8.3.0",
    "uvicorn==0.29.0",
]

[dependency-groups]
dev = [
    "coverage>=7.1,<8",
    "debugpy>=1.6.6,<2",
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "pytest-xdist>=3.2,<4",
    "ruff>=0.11,<0.12",
]

[tool.uv]
package = false
