[project]
name = "zpodapi"
version = "0.7.2"
description = ""
authors = [
    { name = "Kelby Valenti", email = "kelby.valenti@gmail.com" },
    { name = "Timo Sugliani", email = "timo.sugliani@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic==1.13.1",
    "email-validator==2.1.1",
    "fastapi==0.115.11",
    "gitpython==3.1.43",
    "gunicorn==22.0.0",
    "httpx==0.27.0",
    "ipython==8.39.0",
    "passlib==1.7.4",
    "psycopg2==2.9.11",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.4.0",
    "python-multipart==0.0.18",
    "pyvmomi==8.0.2.0.1",
    "rich==13.9.4",
    "sqlmodel==0.0.38",
    "tenacity==8.3.0",
    "uvicorn==0.29.0",
]

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "debugpy==1.8.20",
    "pytest==8.4.2",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.8.0",
    "ruff==0.15.9",
]

[tool.uv]
package = false
# Supply-chain mitigation: ignore packages published in the last 30 days.
exclude-newer = "30 days"

# Allow pytest to find zpodapi + zpodcommon without an editable install or docker.
[tool.pytest.ini_options]
pythonpath = ["src", "../zpodcommon/src"]
testpaths = ["tests"]
