[tool.poetry]
name = "zpodcli"
version = "0.7.0"
description = ""
authors = ["Timo Sugliani <timo.sugliani@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "zpodcli", from = "src"}]

[tool.poetry.scripts]
zcli = "zpodcli.main_cli:launch"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.7.1"
typer = "0.12.3"
zpodsdk = {path = "../zpodsdk", develop = true}
#zpodsdk = "0.7.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
ipython = "^8.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
