[project]
name = "zpodengine"
version = "0.7.2"
description = ""
authors = [
    { name = "Kelby Valenti", email = "kelby.valenti@gmail.com" },
    { name = "Timo Sugliani", email = "timo.sugliani@gmail.com" },
]
readme = "README.md"
requires-python = "==3.12.1"
dependencies = [
    "email-validator==2.1.1",
    "ipython>=8.11,<9",
    "jinja2>=3.1.6,<4",
    "prefect==2.20.16",
    "prefect-docker==0.5.5",
    "psycopg2==2.9.9",
    # Prefect 2.20.16 uses prefect.utilities.callables.generate_parameter_schema
    # which calls pydantic.create_model() with a class body containing a
    # `class Config` namespace. Pydantic 2.11 changed how ConfigWrapper
    # merges config namespaces and now raises
    # `TypeError: 'type' object is not iterable` on that path. Prefect
    # 2.20.x is EOL and will not be patched, so we cap pydantic at <2.11.
    # The previous poetry.lock resolved to 2.10.6 for the same reason.
    "pydantic<2.11",
    "pydantic-settings>=2.1,<3",
    "pyopenssl>=24.0,<25",
    "python-dotenv==1.0.1",
    "pyvmomi<8.0.3",
    "sqlmodel==0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=4,<5",
    "pytest-xdist>=3.2,<4",
    "ruff>=0.11,<0.12",
]

[tool.uv]
package = false
