[project]
name = "zpodengine"
version = "0.7.2"
description = ""
authors = [
    { name = "Kelby Valenti", email = "kelby.valenti@gmail.com" },
    { name = "Timo Sugliani", email = "timo.sugliani@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "email-validator==2.1.1",
    "ipython==8.39.0",
    "jinja2==3.1.6",
    "prefect==3.6.24",
    "prefect-docker==0.7.1",
    "psycopg2==2.9.11",
    "pydantic-settings==2.13.1",
    "pyopenssl==24.3.0",
    "python-dotenv==1.0.1",
    "pyvmomi==8.0.2.0.1",
    "sqlmodel==0.0.38",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.8.0",
    "ruff==0.15.9",
]

[tool.uv]
package = false
# Supply-chain mitigation: ignore packages published in the last 30 days.
exclude-newer = "30 days"

# Allow pytest to find zpodengine + zpodcommon, and pick up zpodcommon's own
# tests/ since zpodcommon has no venv of its own.
[tool.pytest.ini_options]
pythonpath = ["src", "../zpodcommon/src"]
testpaths = ["tests", "../zpodcommon/tests"]
