[project]
name = "zpodsdk"
version = "0.7.2"
description = "A client library for accessing zPod API"
authors = []
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "httpx==0.27.0",
    "attrs==23.2.0",
    "python-dateutil==2.9.0.post0",
]

[dependency-groups]
dev = [
    "ruff>=0.4,<0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zpodsdk"]

[tool.hatch.build.targets.sdist]
include = [
    "src/zpodsdk",
    "README.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
