[project]
name = "zpodsdk"
version = "0.7.2"
description = "A client library for accessing zPod API"
authors = []
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "httpx==0.27.0",
    "attrs==23.2.0",
    "python-dateutil==2.9.0.post0",
]

[dependency-groups]
dev = [
    # pytest 8.4+ requires Python 3.9+; SDK's requires-python is 3.8.1.
    # Stay on the latest 8.3.x to keep the published Python range unchanged.
    "pytest==8.3.5",
    "ruff==0.15.9",
]

[tool.uv]
# Supply-chain mitigation: ignore packages published in the last 30 days.
exclude-newer = "30 days"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/zpodsdk"]

[tool.hatch.build.targets.sdist]
include = [
    "src/zpodsdk",
    "README.md",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
