[tool.poetry]
name = "zpodsdk-builder"
version = "0.7.2"
description = "zpodsdk builder from FastAPI openapi spec file"
authors = ["Timo Sugliani <timo.sugliani@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "zpodsdk_builder"}]

[tool.poetry.dependencies]
python = "^3.10"
openapi-python-client = "0.20.0"
ruff = "^0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
